plugin-transform-react-jsx-source added - for error boundary in dev env

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,7 @@
 {
   "presets": ["@babel/env", "@babel/preset-react"],
-  "plugins": ["@babel/plugin-syntax-dynamic-import"] // Enabling the babel parses dynamic import not transforming them.
+  "plugins": [
+    "@babel/plugin-syntax-dynamic-import",
+    "@babel/plugin-transform-react-jsx-source"
+  ] // Enabling the babel parses dynamic import not transforming them.
 }
